print = executable(
	'print',
	[ 'print.c', pperesource_sources],
	include_directories: inc,
	dependencies: libs,
	link_with: thirdparty_libs,
)

roundtrip = executable(
	'roundtrip',
	[ 'roundtrip.c', pperesource_sources],
	include_directories: inc,
	dependencies: libs,
	link_with: thirdparty_libs,
)
